<resources>
    <string name="app_name">VLCTour</string>
    <string name="menu_credits">Credits</string>
    <string name="openDrawer">Open drawer</string>
    <string name="closeDrawer">Close drawer</string>
    <string name="option1_drawer">Home</string>
    <string name="option2_drawer">Near me</string>
    <string name="option3_drawer">What to see</string>
    <string name="option4_drawer">Routes</string>
    <string name="option5_drawer">Sign in</string>
    <string name="user_name_drawer" translatable="false">Username</string>
    <string name="user_email_drawer" translatable="false">email@address.com</string>
    <string name="poi_title">What to see</string>
    <string name="near_me_tilte">Near Me</string>
    <string name="routes_title">Route Map</string>
    <string name="save_route_title">Save Route</string>
    <string name="saved_route">Saved route</string>
    <string name="sign_in_title">Sign in</string>
    <string name="missing_fields">Missing fields</string>
    <string name="login_in">Logging in...</string>
    <string name="logged_in">Logged in</string>
    <string name="invalid_username_password">Invalid username or password</string>
    <string name="sign_up">Sign up</string>
    <string name="registering">Registering...</string>
    <string name="registered">Registered</string>
    <string name="error">An error occurred</string>
    <string name="route_list">Route List</string>
    <string name="disconnected_reconnect">Disconnected. Please re-connect.</string>
    <string name="service_unavailable">Service unavailable. Try later.</string>
    <string name="location_access_denied">Location access denied</string>
    <string name="marker_added">Marker added to route</string>
    <string name="void_save">Nothing to save</string>
    <string name="not_member">Not a member? Sign up now.</string>
    <string name="login_button">LOGIN</string>
    <string name="password">PASSWORD</string>
    <string name="username">USERNAME</string>
    <string name="email">EMAIL</string>
    <string name="register">REGISTER</string>
    <string name="registered_user">Already registered! Log me in.</string>
    <string name="routes">Routes</string>
    <string name="nearme_description">Don\'t wander around anymore looking for a place. Check them out from your phone</string>
    <string name="poi_description">Discover the most interesting places of Valencia</string>
    <string name="routes_description">Plan your trip ahead with customizable routes</string>
    <string name="home">Home</string>

</resources>
