<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="56dp"
    android:background="@color/ColorDark">

    <LinearLayout
        android:id="@+id/home_near"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_margin="2dp"
        android:background="@color/ColorDarkHighlight">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_home_near"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/near_me_tilte"
                android:textSize="24sp"
                android:textStyle="bold"
                android:paddingTop="32dp"
                android:textColor="@color/ColorLightText"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/nearme_description"
                android:textSize="12sp"
                android:textColor="@color/ColorLightText"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_poi"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_margin="2dp"
        android:background="@color/ColorDarkHighlight">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_home_pois"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/poi_title"
                android:textSize="24sp"
                android:textStyle="bold"
                android:paddingTop="32dp"
                android:textColor="@color/ColorLightText"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/poi_description"
                android:textSize="12sp"
                android:textColor="@color/ColorLightText"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_routes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_margin="2dp"
        android:background="@color/ColorDarkHighlight">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_home_routes"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/routes"
                android:textSize="24sp"
                android:textStyle="bold"
                android:paddingTop="32dp"
                android:textColor="@color/ColorLightText"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/routes_description"
                android:textSize="12sp"
                android:textColor="@color/ColorLightText"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>